<resources>
    <string name="app_name">MyMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="DeleteNote">Are you Sure?</string>
    <string name="enter_message_name">Enter Your Name</string>
    <string name="enter_message_email">Enter Your Email</string>
    <string name="enter_message_mobile">Enter Your Mobile No</string>
    <string name="enter_message_password">Enter Your Password</string>
    <string name="register_now">Register Now</string>
    <string name="login_now">Login Now</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="not_register">Not Register? click Here</string>


</resources>