<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Register">
    <ImageView
        android:src="@mipmap/mymate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="20dp"
        android:textColor="@color/colorAccent"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_gravity="center"
        android:layout_width="match_parent"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_message_name"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_mobile"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLength="10"
        android:inputType="phone"
        android:hint="@string/enter_message_mobile"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_message_email"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:hint="@string/enter_message_password"
        android:layout_height="wrap_content"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/radius_border_button"
        android:layout_below="@id/et_mobile"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="70dp"
        android:paddingVertical="15dp"
        android:text="Register Me"
        android:textColor="@drawable/radius_border_button_text" />

</LinearLayout>