<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Login">
    <ImageView
        android:src="@mipmap/mymate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"

        />
    <EditText
        android:id="@+id/et_email"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:hint="@string/enter_message_email"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:hint="@string/enter_message_password"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/button_login"
        android:background="@drawable/radius_border_button"

        android:paddingHorizontal="70dp"
        android:paddingVertical="15dp"
        android:text="Login"
        android:textColor="@drawable/radius_border_button_text" />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_register"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        />
</LinearLayout>